add recipe for creating website favicon

--- a/roadmap/web/Makefile
+++ b/roadmap/web/Makefile
@@ -130,6 +130,25 @@ $(APT_WEBDOCS):
 	    -e 's/<body>/<body class="roadmap-doc">/' \
 	    -e 's;http://'$(OUR_SITE_REFERENCE)'/;;' $@ 
 
+favicon.ico:
+	mkdir -p favicon.tmpdir
+	cd favicon.tmpdir ;\
+	pngtopnm ../../src/icons/roadmap-32.png >roadmap-32.pnm ;\
+	for size in 16 24 32 48 ;\
+	do \
+	  for color in 16 256 ;\
+	  do \
+	    pnmscale -xsize $$size -ysize $$size roadmap-32.pnm >favicon-$$size-.ppm ;\
+	    pnmcolormap $$color favicon-$$size-.ppm >favicon--$$color.ppm ;\
+	    pnmremap -mapfile=favicon--$$color.ppm favicon-$$size-.ppm >favicon-$$size-$$color.ppm ;\
+	    rm -f favicon-$$size-.ppm favicon--$$color.ppm ;\
+	    ff="$$ff favicon-$$size-$$color.ppm" ;\
+	  done ;\
+	done ;\
+	ppmtowinicon $$ff >../favicon.ico
+	rm -rf favicon.tmpdir
+
+
 
 clean: clean-webdoc
 	rm -f .copied-*
