Add preliminary (untested) support for drivers to draw polygons and circle objects on RoadMap's screen. Add support for the VII proof-of-concept protocol.

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -36,6 +36,7 @@ RMLIBSRC = roadmap_log.c \
 	roadmap_input.c \
 	roadmap_nmea.c \
 	roadmap_gpsd2.c \
+	roadmap_vii.c \
 	roadmap_io.c \
 	roadmap_gps.c \
 	roadmap_object.c \
