--- a/trunk/roadmap/src/Makefile
+++ b/trunk/roadmap/src/Makefile
@@ -38,6 +38,7 @@ RMLIBSRC = roadmap_log.c \
 	roadmap_gpsd2.c \
 	roadmap_io.c \
 	roadmap_gps.c \
+	roadmap_vii.c \
 	roadmap_object.c \
 	roadmap_driver.c \
 	roadmap_adjust.c \
@@ -46,7 +47,6 @@ RMLIBSRC = roadmap_log.c \
 	roadmap_gpx.c \
 	roadmap_linefont.c
 
-#	roadmap_vii.c \
 
 RMLIBOBJS = $(RMLIBSRC:.c=.o)
 
@@ -274,9 +274,9 @@ RMHEADERS = \
 	roadmap_trigonometry.h \
 	roadmap_trip.h \
 	roadmap_types.h \
+	roadmap_vii.h \
 	roadmap_voice.h
 
-#	roadmap_vii.h \
 
 RMDBHEADERS = \
 	roadmap_db.h \
