--- a/roadmap/src/roadmap.desktop
+++ b/roadmap/src/roadmap.desktop
@@ -1,11 +1,8 @@
 [Desktop Entry]
-Comment=RoadMap
 Comment=Car Navigation System
 Exec=roadmap
-Icon=roadmap.png
+Icon=roadmap
 Type=Application
 Name=RoadMap
 GenericName=Map Viewer
-Categories=Application;Other;VectorGraphics;Graphics;Viewer;GTK;
-FilePattern=*roadmap;*.rdm
-
+Categories=VectorGraphics;Graphics;Viewer;GTK;
