--- a/trunk/roadmap/src/Makefile
+++ b/trunk/roadmap/src/Makefile
@@ -342,7 +342,7 @@ ALL_SRC = $(MKFILES) $(RMLIBSRC) $(RMGUISRC) $(RGGUISRC) \
 	$(BPSRC) $(BUSRC) $(XCHGSRC) $(MISCSRC) $(HEADERS) \
 	$(PKGDATAFILES) $(MISCFILES) $(SCRIPTS) $(FONT) $(MANUAL)
 
-ALL_SUBDIRS = unix gpx gtk gtk2 qt qt4 icons ipkg agg_support win32
+ALL_SUBDIRS = unix gpx gtk gtk2 qt qt4 icons ipkg agg_support php win32
 
 # --- Conventional targets ----------------------------------------
 
@@ -436,7 +436,9 @@ installbin:
 	mkdir -p $(pkgbindir)
 	cd $(pkgbindir) && rm -f $(BUILD) $(SCRIPTS)
 	cp $(BUILD) $(SCRIPTS) $(DRIVERS) $(pkgbindir)/.
-	cd $(pkgbindir) && chmod a+x $(BUILD) $(SCRIPTS) $(DRIVERS)
+	cp php/osmgetbmap php/osmgetbmapcore.php $(pkgbindir)/.
+	cd $(pkgbindir) && \
+		chmod a+x $(BUILD) $(SCRIPTS) $(DRIVERS) php/osmgetbmap
 	mkdir -p $(man1dir)
 	$(INSTALL_DATA) roadgps.1 roadmap.1 $(man1dir)/.
 
