allow the app to be more responsive to user input during a repaint -- in particular, lengthy screen operations may now be interrupted by new motion commands.  previously, any repaint had to complete before another could commence.  now a quick succession of 5 arrow keys will take approximately one "repaint" time, instead of 5.
since the UI is now somewhat "awake" during repaints, i was also able
to add a progress bar, which indicates how long a given screen refresh
will take.  (gtk/gtk2 only)

the tricky/risky part of this change is in the scheduling of repaints.
they should really be driven by a separate thread, but i'm reluctant
to go there, at least as long as we're supporting multiple desktops.
instead, i install/unininstall a worker routine to handle the repaints
that runs just before the app would otherwise go idle.

--- a/roadmap/src/Makefile
+++ b/roadmap/src/Makefile
@@ -267,6 +267,7 @@ RMHEADERS = \
 	roadmap_pointer.h \
 	roadmap_polygon.h \
 	roadmap_preferences.h \
+	roadmap_progress.h \
 	roadmap_scan.h \
 	roadmap_screen.h \
 	roadmap_screen_obj.h \
