--- a/roadmap/src/gtk2/Makefile
+++ b/roadmap/src/gtk2/Makefile
@@ -20,7 +20,8 @@ RMLIBSRCS=roadmap_keyboard.c \
           roadmap_messagebox.c \
           roadmap_dialog.c \
           roadmap_fileselection.c \
-          roadmap_signals.c
+          roadmap_signals.c \
+          roadmap_progress.c
 
 RMLIBOBJS = $(CANVAS_OBJS) $(RMLIBSRCS:.c=.o)
 
