--- a/trunk/roadmap/src/gtk/Makefile
+++ b/trunk/roadmap/src/gtk/Makefile
@@ -14,7 +14,8 @@ RMLIBSRCS=roadmap_keyboard.c \
           roadmap_messagebox.c \
           roadmap_dialog.c \
           roadmap_fileselection.c \
-          roadmap_signals.c
+          roadmap_signals.c \
+          roadmap_progress.c
 
 RMLIBOBJS = $(CANVAS_OBJS) $(RMLIBSRCS:.c=.o)
 
