minor fixups to wince support (danny backx)

--- a/roadmap/src/win32/roadmap.rc
+++ b/roadmap/src/win32/roadmap.rc
@@ -56,7 +56,7 @@ END
 IDM_MENU SHMENUBAR MOVEABLE PURE 
 BEGIN
     IDM_MENU, 1,
-    I_IMAGENONE, IDM_MAIN_COMMAND1, TBSTATE_ENABLED, 
+    I_IMAGENONE, IDM_MAIN_COMMAND1, TBSTATE_ENABLED
 END
 
 
