iphone update from morten bek:     Here's a patch for the iPhone frontend:     Adds preliminary support for toolbars     Fixes get_text_extends     Supports unicode string drawing.     Internally, the coordinate system is flipped in order to be able to     assign the surface directly to an iPhone GUI layer - hope that it's a     bit faster and it could allow for fancy graphics stuff like     drop-shadows and transparency.     General cleaning up.     Sets up HOME and PATH environment variables.     Terminates application correctly.

--- a/roadmap/src/iphone/Makefile
+++ b/roadmap/src/iphone/Makefile
@@ -50,6 +50,7 @@ install:
 	cp iphoneroadmap $(INSTALLDIR)/RoadMap
 	cp Info.plist.roadmap $(INSTALLDIR)/Info.plist
 	cp ../icons/iphone_default.png $(INSTALLDIR)/icon.png
+	cp -r ../icons $(INSTALLDIR)/resources/pixmaps
 
 uninstall:
 	cd $(bindir) && rm -f $(TARGETS) iphoneroadmap iphoneroadgps
